frontend/k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reconsys-app
  labels:
    name: reconsys-app
    project: reconsys
    environment: production
